// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterableSelect.jsx 1`] = `
<DocumentFragment>
  <div
    style="width: 40%;"
  >
    <div
      class="t-select"
      style="user-select: none;"
    >
      <input
        class="t-input__inner"
        placeholder="请选择"
        style="border: 0px; padding: 0px;"
        value=""
      />
      <svg
        class="t-icon t-select-right-icon"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M514.72285696 704.7972396800001L520.12398592 703.85630784C525.44129472 702.4731296 530.472656 699.70458368 534.64508928 695.5504467200001L534.64508928 695.5504467200001 910.3632832 320.41891840000005 865.108448 275.16408320000005 512.02827328 627.72684352 160.0351072 275.20768640000006 114.78027328 320.46252160000006 489.38601344 695.5130879999999C496.31708544 702.46731264 505.65104192 705.56179008 514.72285696 704.7972396800001Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LabelInValueSelect.jsx 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <div
      style="width: 40%;"
    >
      <div
        class="t-select"
        style="user-select: none;"
      >
        <span
          class="t-select-placeholder"
          style="color: rgb(0, 0, 0);"
        >
          Apple
        </span>
        <svg
          class="t-icon t-select-right-icon"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M514.72285696 704.7972396800001L520.12398592 703.85630784C525.44129472 702.4731296 530.472656 699.70458368 534.64508928 695.5504467200001L534.64508928 695.5504467200001 910.3632832 320.41891840000005 865.108448 275.16408320000005 512.02827328 627.72684352 160.0351072 275.20768640000006 114.78027328 320.46252160000006 489.38601344 695.5130879999999C496.31708544 702.46731264 505.65104192 705.56179008 514.72285696 704.7972396800001Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      style="width: 40%; margin-left: 10%;"
    >
      <div
        class="t-select"
        style="user-select: none;"
      >
        <span
          class="t-tag t-tag--default t-tag--dark t-tag--middle t-tag--square"
        >
          Apple
          <svg
            class="t-icon t-icon-close"
          >
            <use
              xlink:href="#t-icon-close"
            />
          </svg>
        </span>
        <svg
          class="t-icon t-select-right-icon"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M514.72285696 704.7972396800001L520.12398592 703.85630784C525.44129472 702.4731296 530.472656 699.70458368 534.64508928 695.5504467200001L534.64508928 695.5504467200001 910.3632832 320.41891840000005 865.108448 275.16408320000005 512.02827328 627.72684352 160.0351072 275.20768640000006 114.78027328 320.46252160000006 489.38601344 695.5130879999999C496.31708544 702.46731264 505.65104192 705.56179008 514.72285696 704.7972396800001Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RemoteSearchSelect.jsx 1`] = `
<DocumentFragment>
  <div
    style="width: 40%;"
  >
    <div
      class="t-select"
      style="user-select: none;"
    >
      <input
        class="t-input__inner"
        placeholder="请选择"
        style="border: 0px; padding: 0px;"
        value=""
      />
      <svg
        class="t-icon t-select-right-icon"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M514.72285696 704.7972396800001L520.12398592 703.85630784C525.44129472 702.4731296 530.472656 699.70458368 534.64508928 695.5504467200001L534.64508928 695.5504467200001 910.3632832 320.41891840000005 865.108448 275.16408320000005 512.02827328 627.72684352 160.0351072 275.20768640000006 114.78027328 320.46252160000006 489.38601344 695.5130879999999C496.31708544 702.46731264 505.65104192 705.56179008 514.72285696 704.7972396800001Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectSizes.jsx 1`] = `
<DocumentFragment>
  <div>
    <div
      style="display: flex; margin-bottom: 24px;"
    >
      <h4
        style="width: 80px;"
      >
        Small
      </h4>
      <div
        style="width: 30%;"
      >
        <div
          class="t-select t-size-s"
          style="user-select: none;"
        >
          <span
            class="t-select-placeholder"
            style="color: rgb(0, 0, 0);"
          >
            Apple
          </span>
          <svg
            class="t-icon t-select-right-icon"
            version="1.1"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M514.72285696 704.7972396800001L520.12398592 703.85630784C525.44129472 702.4731296 530.472656 699.70458368 534.64508928 695.5504467200001L534.64508928 695.5504467200001 910.3632832 320.41891840000005 865.108448 275.16408320000005 512.02827328 627.72684352 160.0351072 275.20768640000006 114.78027328 320.46252160000006 489.38601344 695.5130879999999C496.31708544 702.46731264 505.65104192 705.56179008 514.72285696 704.7972396800001Z"
              fill-opacity=".9"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      style="display: flex; margin-bottom: 24px;"
    >
      <h4
        style="width: 80px;"
      >
        Default
      </h4>
      <div
        style="width: 30%;"
      >
        <div
          class="t-select"
          style="user-select: none;"
        >
          <span
            class="t-select-placeholder"
            style="color: rgb(0, 0, 0);"
          >
            Apple
          </span>
          <svg
            class="t-icon t-select-right-icon"
            version="1.1"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M514.72285696 704.7972396800001L520.12398592 703.85630784C525.44129472 702.4731296 530.472656 699.70458368 534.64508928 695.5504467200001L534.64508928 695.5504467200001 910.3632832 320.41891840000005 865.108448 275.16408320000005 512.02827328 627.72684352 160.0351072 275.20768640000006 114.78027328 320.46252160000006 489.38601344 695.5130879999999C496.31708544 702.46731264 505.65104192 705.56179008 514.72285696 704.7972396800001Z"
              fill-opacity=".9"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      style="display: flex; margin-bottom: 24px;"
    >
      <h4
        style="width: 80px;"
      >
        Large
      </h4>
      <div
        style="width: 30%;"
      >
        <div
          class="t-select t-size-l"
          style="user-select: none;"
        >
          <span
            class="t-select-placeholder"
            style="color: rgb(0, 0, 0);"
          >
            Apple
          </span>
          <svg
            class="t-icon t-select-right-icon"
            version="1.1"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M514.72285696 704.7972396800001L520.12398592 703.85630784C525.44129472 702.4731296 530.472656 699.70458368 534.64508928 695.5504467200001L534.64508928 695.5504467200001 910.3632832 320.41891840000005 865.108448 275.16408320000005 512.02827328 627.72684352 160.0351072 275.20768640000006 114.78027328 320.46252160000006 489.38601344 695.5130879999999C496.31708544 702.46731264 505.65104192 705.56179008 514.72285696 704.7972396800001Z"
              fill-opacity=".9"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectWithOptions.jsx 1`] = `
<DocumentFragment>
  <div
    style="width: 40%;"
  >
    <div
      class="t-select"
      style="user-select: none;"
    >
      <span
        class="t-select-placeholder"
        style="color: rgb(0, 0, 0);"
      >
        Apple
      </span>
      <svg
        class="t-icon t-select-right-icon"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M514.72285696 704.7972396800001L520.12398592 703.85630784C525.44129472 702.4731296 530.472656 699.70458368 534.64508928 695.5504467200001L534.64508928 695.5504467200001 910.3632832 320.41891840000005 865.108448 275.16408320000005 512.02827328 627.72684352 160.0351072 275.20768640000006 114.78027328 320.46252160000006 489.38601344 695.5130879999999C496.31708544 702.46731264 505.65104192 705.56179008 514.72285696 704.7972396800001Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectWithRef.jsx 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <div
      style="width: 40%;"
    >
      <div
        class="t-select"
        style="user-select: none;"
      >
        <span
          class="t-select-placeholder"
          style="color: rgb(0, 0, 0);"
        >
          Apple
        </span>
        <svg
          class="t-icon t-select-right-icon"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M514.72285696 704.7972396800001L520.12398592 703.85630784C525.44129472 702.4731296 530.472656 699.70458368 534.64508928 695.5504467200001L534.64508928 695.5504467200001 910.3632832 320.41891840000005 865.108448 275.16408320000005 512.02827328 627.72684352 160.0351072 275.20768640000006 114.78027328 320.46252160000006 489.38601344 695.5130879999999C496.31708544 702.46731264 505.65104192 705.56179008 514.72285696 704.7972396800001Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <button
      class="t-button t-button--theme-default t-button--variant-base"
      style="margin-left: 24px;"
    >
      打印ref
    </button>
  </div>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <div
      style="width: 40%;"
    >
      <div
        class="t-select"
        style="user-select: none;"
      >
        <span
          class="t-select-placeholder"
          style="color: rgb(0, 0, 0);"
        >
          Apple
        </span>
        <svg
          class="t-icon t-select-right-icon"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M514.72285696 704.7972396800001L520.12398592 703.85630784C525.44129472 702.4731296 530.472656 699.70458368 534.64508928 695.5504467200001L534.64508928 695.5504467200001 910.3632832 320.41891840000005 865.108448 275.16408320000005 512.02827328 627.72684352 160.0351072 275.20768640000006 114.78027328 320.46252160000006 489.38601344 695.5130879999999C496.31708544 702.46731264 505.65104192 705.56179008 514.72285696 704.7972396800001Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      style="width: 40%; margin-left: 10%;"
    >
      <div
        class="t-select t-is-disabled"
        style="user-select: none;"
      >
        <span
          class="t-select-placeholder"
          style="color: rgb(0, 0, 0);"
        >
          Apple
        </span>
        <svg
          class="t-icon t-select-right-icon"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M514.72285696 704.7972396800001L520.12398592 703.85630784C525.44129472 702.4731296 530.472656 699.70458368 534.64508928 695.5504467200001L534.64508928 695.5504467200001 910.3632832 320.41891840000005 865.108448 275.16408320000005 512.02827328 627.72684352 160.0351072 275.20768640000006 114.78027328 320.46252160000006 489.38601344 695.5130879999999C496.31708544 702.46731264 505.65104192 705.56179008 514.72285696 704.7972396800001Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`custom.jsx 1`] = `
<DocumentFragment>
  <div
    style="width: 40%;"
  >
    <div
      class="t-select"
      style="user-select: none;"
    >
      <svg
        class="t-icon t-icon-desktop"
      >
        <use
          xlink:href="#t-icon-desktop"
        />
      </svg>
      <span
        class="t-select-placeholder"
        style="color: rgb(0, 0, 0); margin-left: 6px;"
      >
        apple
      </span>
      <svg
        class="t-icon t-select-right-icon"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M514.72285696 704.7972396800001L520.12398592 703.85630784C525.44129472 702.4731296 530.472656 699.70458368 534.64508928 695.5504467200001L534.64508928 695.5504467200001 910.3632832 320.41891840000005 865.108448 275.16408320000005 512.02827328 627.72684352 160.0351072 275.20768640000006 114.78027328 320.46252160000006 489.38601344 695.5130879999999C496.31708544 702.46731264 505.65104192 705.56179008 514.72285696 704.7972396800001Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`group.jsx 1`] = `
<DocumentFragment>
  <div
    style="width: 40%;"
  >
    <div
      class="t-select"
      style="user-select: none;"
    >
      <span
        class="t-select-placeholder"
        style="color: rgb(0, 0, 0);"
      >
        Apple
      </span>
      <svg
        class="t-icon t-select-right-icon"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M514.72285696 704.7972396800001L520.12398592 703.85630784C525.44129472 702.4731296 530.472656 699.70458368 534.64508928 695.5504467200001L534.64508928 695.5504467200001 910.3632832 320.41891840000005 865.108448 275.16408320000005 512.02827328 627.72684352 160.0351072 275.20768640000006 114.78027328 320.46252160000006 489.38601344 695.5130879999999C496.31708544 702.46731264 505.65104192 705.56179008 514.72285696 704.7972396800001Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`multiple.jsx 1`] = `
<DocumentFragment>
  <div
    style="width: 40%;"
  >
    <div
      class="t-select"
      style="user-select: none;"
    >
      <span
        class="t-tag t-tag--default t-tag--dark t-tag--middle t-tag--square"
      >
        Apple
        <svg
          class="t-icon t-icon-close"
        >
          <use
            xlink:href="#t-icon-close"
          />
        </svg>
      </span>
      <svg
        class="t-icon t-select-right-icon"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M514.72285696 704.7972396800001L520.12398592 703.85630784C525.44129472 702.4731296 530.472656 699.70458368 534.64508928 695.5504467200001L534.64508928 695.5504467200001 910.3632832 320.41891840000005 865.108448 275.16408320000005 512.02827328 627.72684352 160.0351072 275.20768640000006 114.78027328 320.46252160000006 489.38601344 695.5130879999999C496.31708544 702.46731264 505.65104192 705.56179008 514.72285696 704.7972396800001Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
